WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76687
Removed some regexp entry boilerplate code
https://bugs.webkit.org/show_bug.cgi?id=76687
Summary
Removed some regexp entry boilerplate code
Geoffrey Garen
Reported
2012-01-19 23:17:08 PST
Removed some regexp entry boilerplate code
Attachments
Patch
(4.94 KB, patch)
2012-01-20 00:29 PST
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(7.39 KB, patch)
2012-01-20 11:56 PST
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(8.11 KB, patch)
2012-01-20 12:05 PST
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(8.19 KB, patch)
2012-01-20 12:24 PST
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2012-01-20 00:29:47 PST
Created
attachment 123261
[details]
Patch
Michael Saboff
Comment 2
2012-01-20 09:03:59 PST
This changes seem fine to me.
Darin Adler
Comment 3
2012-01-20 09:36:28 PST
Comment on
attachment 123261
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=123261&action=review
> Source/JavaScriptCore/runtime/RegExp.cpp:339 > + ASSERT(startOffset >= 0);
Another approach might be to use the type unsigned instead of int.
> Source/JavaScriptCore/runtime/RegExp.cpp:340 > + ASSERT(!s.isNull());
Clearly the check for null that was here before was unneeded. But the assertion also seems unneeded. The code seems like it would do just fine if passed a null string, and shouldn’t be so picky!
> Source/JavaScriptCore/runtime/RegExp.cpp:343 > + ASSERT(m_state != ParseError); > > ASSERT(m_state != ParseError);
Oops, left this assertion in twice.
Geoffrey Garen
Comment 4
2012-01-20 11:56:11 PST
Created
attachment 123351
[details]
Patch
Geoffrey Garen
Comment 5
2012-01-20 12:05:28 PST
Created
attachment 123352
[details]
Patch
Geoffrey Garen
Comment 6
2012-01-20 12:24:03 PST
Created
attachment 123357
[details]
Patch
Geoffrey Garen
Comment 7
2012-01-20 13:06:02 PST
Committed
r105539
: <
http://trac.webkit.org/changeset/105539
>
Daniel Bates
Comment 8
2012-01-21 19:23:42 PST
Comment on
attachment 123357
[details]
Patch Clearing review flag on patch to remove it from the review queue since it was already committed per
comment 7
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug