Source/JavaScriptCore/yarr/YarrInterpreter.cpp
@@ -1443,12 +1443,15 @@ public:
 
     int interpret()
     {
+        if (input.isNotAvailableInput(0))
+            return -1;
+
+        for (unsigned i = 0; i < pattern->m_body->m_numSubpatterns + 1; ++i)
+            output[i << 1] = -1;
+
         allocatorPool = pattern->m_allocator->startAllocator();
         if (!allocatorPool)
             CRASH();
-
-        for (unsigned i = 0; i < ((pattern->m_body->m_numSubpatterns + 1) << 1); ++i)
-            output[i] = -1;
 
         DisjunctionContext* context = allocDisjunctionContext(pattern->m_body.get());
 
@@ -1462,7 +1465,6 @@ public:
 
         pattern->m_allocator->stopAllocator();
 
-        // RegExp.cpp currently expects all error to be converted to -1.
         ASSERT((result == JSRegExpMatch) == (output[0] != -1));
         return output[0];
     }
